# UtopiaIsland

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Changelog-zh.md  Changelog.md  README-zh.md  README.md  cargo_error.txt  crates.lnk  patch_lg.py
.agents/: ARCHITECTURE.md  STYLE-GUIDE.md
.agents/skills/commit-push/: SKILL.md
.agents/skills/pr-check/: SKILL.md
.backup/: kawase_blur.wgsl  liquid_glass.rs  liquid_glass.wgsl
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_request.yml  feature_request.yml  improvement_request.yml
.github/scripts/: extract_changelog.py
.github/workflows/: pr-build.yml  pr-check.yml  publish-crates.yml  release.yml  rust.yml
.reasonix/: liquid-glass-dual-pass.md
.reasonix/truncated-results/: 1782498016413-c29c8510-web_fetch.txt  1782498021097-d583c79a-web_fetch.txt  1782498036647-6f9ad5ff-web_fetch.txt
Docs/: AGENTS.md  CONTRIBUTING-zh.md  CONTRIBUTING.md
Page/: api-changelog.md  copy-changelog.js  guide.md  index.md  package.json  plugin-dev.md
Page/.vitepress/: config.mts
Page/zh/: api-changelog.md  getting-started.md  plugin-dev.md
crates/winisland-plugin-api/: Cargo.toml  ChangeLog.md  README.md
crates/winisland-plugin-api/src/: host.rs  lib.rs  vtable.rs
crates/winisland-plugin-api/src/types/: context.rs  i18n.rs  metadata.rs  mod.rs  shortcut.rs  theme.rs
resources/in_app/lang/: en.lang  en_us.lang  es_es.lang  ja_jp.lang  ko_kr.lang  zh.lang  zh_cn.lang  zh_tw.lang
src/: main.rs
src/core/: audio.rs  config.rs  i18n.rs  lyrics.rs  mod.rs  notifications.rs  persistence.rs  reminders.rs  render.rs  smtc.rs
src/core/context/: mod.rs  types.rs
src/icons/: mod.rs  settings.rs
src/plugin/: loader.rs  manager.rs  types.rs  zip_loader.rs
src/shaders/: kawase_blur.wgsl  liquid_glass.wgsl  liquid_glass_overlay.wgsl
src/ui/expanded/: main_view.rs  music_view.rs  widget_view.rs
src/utils/: autostart.rs  backdrop.rs  color.rs  dd_capture.rs  font.rs  glass.rs  liquid_glass.rs  logger.rs  mod.rs  mouse.rs  physics.rs  process.rs  scroll.rs  updater.rs  wgc_capture.rs  win32.rs
src/utils/settings_ui/: input.rs  items.rs  renderer.rs
src/window/: app.rs  settings.rs  tray.rs
src/window/settings/: input.rs  mod.rs
