[package]
name = "WinIsland"
version = "1.2.0"
edition = "2024"

[workspace]
members = ["crates/winisland-plugin-api"]

[dependencies]
cpal = "0.18.1"
realfft = "3.3"
bytemuck = { version = "1.25.0", features = ["derive"] }
skia-safe = "0.97.2"
softbuffer = "0.4.8"
wgpu = "29"
pollster = "0.4"
tray-icon = "0.24.1"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_Security", "Media_Control", "Foundation", "Foundation_Collections", "Storage_Streams", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_Variant", "Win32_Globalization", "Win32_UI_Shell", "UI_Notifications", "UI_Notifications_Management", "Data_Xml_Dom", "ApplicationModel", "Graphics_Capture", "Graphics_DirectX_Direct3D11", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi", "Win32_System_WinRT_Direct3D11", "Win32_System_WinRT_Graphics_Capture"] }
windows-future = "0.3.2"
winit = "0.30"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0"
open = "5.3"
image = "0.25"
reqwest = { version = "0.13.4", features = ["json"] }
serde_json = "1.0.149"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
rfd = "0.17.2"
once_cell = "1.19"
libloading = "0.9"
log = "0.4"
env_logger = "0.11"
winisland-plugin-api = { path = "crates/winisland-plugin-api" }
zip = "8.6.0"
serde_yaml = "0.9"
wgpu-hal = "29"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
