[package]
name = "winisland-plugin-api"
version = "0.2.0"
edition = "2024"
description = "C ABI types for WinIsland plugin development, with optional build-time packaging and signing tools"
repository = "https://github.com/Eatgrapes/WinIsland"
homepage = "https://github.com/Eatgrapes/WinIsland"
license = "MIT"
keywords = ["plugin", "dynamic-island", "winisland"]
categories = ["api-bindings", "development-tools::build-utils"]
readme = "README.md"

[features]
default = []
packager = [
    "dep:ed25519-dalek",
    "dep:sha2",
    "dep:hex",
    "dep:zip",
    "dep:tempfile",
    "dep:log",
    "dep:serde_yaml",
    "dep:serde",
    "dep:serde_json",
    "dep:toml",
]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "1.1.2", optional = true }
serde_yaml = { version = "0.9", optional = true }
ed25519-dalek = { version = "2", features = ["pem", "pkcs8"], optional = true }
sha2 = { version = "0.11.0", optional = true }
hex = { version = "0.4", optional = true }
zip = { version = "8.6.0", optional = true }
tempfile = { version = "3", optional = true }
log = { version = "0.4", optional = true }

[package.metadata.docs.rs]
features = ["packager"]
